Transparency, added other Buttons

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -38,7 +38,13 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_alignParentLeft="true"
-				android:background="@drawable/cartoonblack"/>
+				android:background="@drawable/mutebutton"/>
+				
+<Button android:id="@+id/endcall"
+		android:layout_toRightOf="@+id/sound_optn"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:background="@drawable/endcall"/>
 
 <TextView android:id="@+id/score_text1"
 		  android:layout_width="wrap_content" 
