--- a/res/anim/z_move.xml
+++ b/res/anim/z_move.xml
@@ -1,13 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <set xmlns:android="http://schemas.android.com/apk/res/android" >
-    
+	<translate  android:fromXDelta="100%p" 
+    		 	android:toXDelta="0" 
+    		 	android:fromYDelta="0"
+    		 	android:toYDelta="5%p"
+    		 	android:duration="1000"/> 	
+
+    <translate  android:startOffset="1000"
+    			android:fromXDelta="0%p" 
+    		 	android:toXDelta="99%p" 
+    		 	android:fromYDelta="5%p"
+    		 	android:toYDelta="10%p"
+    		 	android:duration="1000" />
+    		 	
+    <translate  android:startOffset="2000"
+    			android:fromXDelta="0"
+    		 	android:toXDelta="-99%p" 
+    		 	android:fromYDelta="10%p"
+    		 	android:toYDelta="20%p"
+    		 	android:duration="1000" />
+     
+    <translate  android:startOffset="3000"
+    			android:fromXDelta="0"
+    		 	android:toXDelta="50%p" 
+    		 	android:fromYDelta="0"
+    		 	android:toYDelta="30%p"
+    		 	android:duration="1000" />
+<!--     
     <translate  android:fromXDelta="100%p" 
     		 	android:toXDelta="0" 
     		 	android:fromYDelta="0"
     		 	android:toYDelta="40"
     		 	android:duration="1000"/> 	
-    		 	
 
     <translate  android:startOffset="1000"
     			android:fromXDelta="0%p" 
