--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -50,13 +50,15 @@
 <TextView android:id="@+id/score_text1"
 		  android:layout_width="wrap_content" 
 		  android:layout_height="wrap_content" 
-		  android:text="Score1:0" 
+		  android:text="Score1:0"
+		  android:textSize="20dp" 
 		  android:layout_alignParentRight="true"></TextView>
 
 <TextView android:id="@+id/score_text2"
 		  android:layout_width="wrap_content" 
 		  android:layout_height="wrap_content" 
 		  android:text="Score2:0" 
+		  android:textSize="20dp"
 		  android:layout_alignParentRight="true"
 		  android:layout_below="@+id/score_text1"></TextView>
 
